--- a/cpp.vcxproj.filters
+++ b/cpp.vcxproj.filters
@@ -23,7 +23,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="day1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="day3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
