--- a/cpp.vcxproj.filters
+++ b/cpp.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="day3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="day4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
