--- a/cpp.vcxproj.filters
+++ b/cpp.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="day4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="day5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
